# thing_ranker

./: '  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
api/: .gitignore  Cargo.toml  README.md
api/migrations/: 1_INIT.sql
api/scripts/: clear_data
api/src/: account.rs  app.rs  asset.rs  category.rs  image.rs  lib.rs  main.rs  rank.rs  thing.rs  util.rs
api/src/app/: app.rs  auth.rs  config.rs  error.rs  mod.rs  state.rs
api/src/db/: mod.rs
api/src/layer/: auth.rs
src/: main.rs
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  constants.ts  main.tsx
ui/src/auth/: oidc.ts
ui/src/components/: ItemCard.tsx  ItemGrid.tsx  ItemList.tsx  LogIn.tsx  Navbar.tsx  RootErrorBoundary.tsx  SearchInput.tsx  Select.tsx  SignIn.tsx  SignInButton.tsx  ThingCard.tsx
ui/src/components/ui/: color-mode.tsx
ui/src/model/: account.ts  category.ts  item.ts  page.ts  thing.ts
ui/src/pages/: CategoryInfo.tsx  CategoryList.tsx  Home.tsx  NotFound.tsx  SignIn.tsx  ThingInfo.tsx  ThingList.tsx  Things.tsx
