[package]
name = "thing_ranker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
config = { version = "0.15.23", features = ["yaml"] }
env_logger = "0.11.10"
log = "0.4.32"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
